cl-som-imx8: configs: Add mender support
Signed-off-by: Kevin Lannen <kevin@patroness.com>

Defined CONFIG_SYS_REDUNDAND_ENVIRONMENT for mender

--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -84,6 +84,9 @@ CONFIG_DM_REGULATOR_GPIO=y
 CONFIG_MXC_UART=y
 CONFIG_DM_THERMAL=y
 CONFIG_NXP_TMU=y
+CONFIG_BOOTCOUNT_LIMIT=y
+CONFIG_BOOTCOUNT_ENV=y
+CONFIG_BLOCK_CACHE=y
 CONFIG_USB=y
 CONFIG_DM_USB=y
 CONFIG_USB_XHCI_HCD=y
