--- a/arch/arm/dts/imx8mq.dtsi
+++ b/arch/arm/dts/imx8mq.dtsi
@@ -213,7 +213,7 @@
 					type = "passive";
 				};
 
-				cpu-crit {
+				cpu_crit: cpu-crit {
 					temperature = <90000>;
 					hysteresis = <2000>;
 					type = "critical";
