--- a/board/compulab/plat/imx8mq/ddr/Makefile
+++ b/board/compulab/plat/imx8mq/ddr/Makefile
@@ -3,3 +3,4 @@ obj-y += lpddr4_timing_05_10_2g_3op.o
 obj-y += lpddr4_timing_1g_3op.o
 obj-y += lpddr4_timing_2g_3op.o
 obj-y += lpddr4_timing_ff000110_4g_3op.o
+obj-y += lpddr4_timing_ff000010_4g_3op.o
