--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -27,7 +27,7 @@ CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_OF_SYSTEM_SETUP=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg"
-CONFIG_DEFAULT_FDT_FILE="sbc-imx8.dtb"
+CONFIG_DEFAULT_FDT_FILE="cl-som-imx8.dtb"
 CONFIG_BOARD_LATE_INIT=y
 CONFIG_BOARD_EARLY_INIT_F=y
 CONFIG_SPL_BOARD_INIT=y
@@ -45,9 +45,9 @@ CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_POWEROFF=y
-CONFIG_CMD_DHCP=y
+CONFIG_CMD_DHCP=n
 CONFIG_CMD_MII=y
-CONFIG_CMD_PING=y
+CONFIG_CMD_PING=n
 CONFIG_CMD_CACHE=y
 CONFIG_CMD_REGULATOR=y
 CONFIG_CMD_EXT2=y
@@ -57,7 +57,7 @@ CONFIG_CMD_FAT=y
 CONFIG_CMD_FS_GENERIC=y
 CONFIG_EFI_PARTITION=y
 CONFIG_OF_CONTROL=y
-CONFIG_DEFAULT_DEVICE_TREE="cl-som-imx8"
+CONFIG_DEFAULT_DEVICE_TREE="luci-imx8mq-som"
 CONFIG_ENV_IS_IN_MMC=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG=y
@@ -71,7 +71,7 @@ CONFIG_MMC_IO_VOLTAGE=y
 CONFIG_MMC_UHS_SUPPORT=y
 CONFIG_MMC_HS400_SUPPORT=y
 CONFIG_FSL_USDHC=y
-CONFIG_DM_ETH=y
+CONFIG_DM_ETH=n
 CONFIG_FEC_MXC=y
 CONFIG_MII=y
 CONFIG_PINCTRL=y
@@ -90,16 +90,17 @@ CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_DWC3=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_DWC3=y
-CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET=n
 CONFIG_USB_GADGET_MANUFACTURER="FSL"
 CONFIG_USB_GADGET_VENDOR_NUM=0x0525
 CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
 CONFIG_SDP_LOADADDR=0x40400000
 CONFIG_USB_GADGET_DOWNLOAD=y
-CONFIG_USB_HOST_ETHER=y
-CONFIG_USB_ETHER_ASIX88179=y
-CONFIG_USB_ETHER_MCS7830=y
-CONFIG_DM_VIDEO=y
+CONFIG_USB_HOST_ETHER=n
+CONFIG_USB_ETHER_ASIX88179=n
+CONFIG_USB_ETHER_MCS7830=n
+CONFIG_DM_VIDEO=n
 CONFIG_SYS_WHITE_ON_BLACK=y
-CONFIG_VIDEO_IMX8M_DCSS=y
-CONFIG_VIDEO_IMX8M_HDMI=y
+CONFIG_VIDEO_IMX8M_DCSS=n
+CONFIG_VIDEO_IMX8M_HDMI=n
+CONFIG_BOOTDELAY=0
