--- a/arch/arm/dts/cl-som-imx8.dts
+++ b/arch/arm/dts/cl-som-imx8.dts
@@ -32,6 +32,11 @@
 		};
 	};
 
+	memory@40000000 {
+		device_type = "memory";
+		reg = <0x00000000 0x40000000 0 0x80000000>;
+	};
+
 	leds {
 		compatible = "gpio-leds";
 		heartbeat-led {
@@ -427,7 +432,7 @@
 
 &usb_dwc3_0 {
 	status = "okay";
-	dr_mode = "peripheral";
+	dr_mode = "host";
 };
 
 &usb3_phy1 {
