--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -25,7 +25,6 @@ CONFIG_FIT_EXTERNAL_OFFSET=0x3000
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_OF_SYSTEM_SETUP=y
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg"
 CONFIG_DEFAULT_FDT_FILE="sbc-imx8.dtb"
 CONFIG_BOARD_EARLY_INIT_F=y
 CONFIG_BOARD_LATE_INIT=y
@@ -103,3 +102,13 @@ CONFIG_SYS_WHITE_ON_BLACK=y
 CONFIG_VIDEO_IMX8M_DCSS=n
 CONFIG_VIDEO_IMX8M_HDMI=n
 CONFIG_BOOTDELAY=0
+CONFIG_SYS_I2C_EEPROM_BUS=1
+CONFIG_SYS_I2C_EEPROM_SIZE=256
+CONFIG_SYS_I2C_EEPROM_ADDR_LEN=1
+CONFIG_SYS_EEPROM_PAGE_WRITE_BITS=4
+CONFIG_SYS_EEPROM_PAGE_WRITE_DELAY_MS=5
+
+CONFIG_SYS_MALLOC_LEN=0x2000000
+
+CONFIG_SYS_MMC_ENV_DEV=0
+CONFIG_SYS_MMC_ENV_PART=1
