--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -26,6 +26,9 @@ CONFIG_ARM=y
 CONFIG_SYS_ARCH="arm"
 CONFIG_SYS_CPU="armv8"
 CONFIG_SYS_SOC="imx8m"
+CONFIG_SYS_VENDOR="compulab"
+CONFIG_SYS_BOARD="cl-som-imx8"
+CONFIG_SYS_CONFIG_NAME="cl-som-imx8"
 # CONFIG_SKIP_LOWLEVEL_INIT is not set
 # CONFIG_SPL_SKIP_LOWLEVEL_INIT is not set
 # CONFIG_TPL_SKIP_LOWLEVEL_INIT is not set
@@ -188,10 +191,51 @@ CONFIG_SYS_I2C_MXC_I2C2=y
 CONFIG_SYS_I2C_MXC_I2C3=y
 # CONFIG_SYS_I2C_MXC_I2C4 is not set
 CONFIG_DM_GPIO=y
-CONFIG_DEFAULT_DEVICE_TREE="luci-imx8mq-som"
+CONFIG_DEFAULT_DEVICE_TREE="cl-som-imx8"
 CONFIG_SPL_TEXT_BASE=0x7E1000
+CONFIG_IMX8M=y
+CONFIG_IMX8MQ=y
+CONFIG_SECONDARY_BOOT_SECTOR_OFFSET=0x0
 CONFIG_IMX8M_MCU_RDC_START_CONFIG_ADDR=0x186000
 CONFIG_IMX8M_MCU_RDC_STOP_CONFIG_ADDR=0x187000
+# CONFIG_TARGET_IMX8MQ_CM is not set
+# CONFIG_TARGET_IMX8MQ_EVK is not set
+# CONFIG_TARGET_IMX8MQ_PHANBELL is not set
+# CONFIG_TARGET_IMX8MQ_DDR3L_VAL is not set
+# CONFIG_TARGET_IMX8MQ_DDR4_VAL is not set
+# CONFIG_TARGET_IMX8MM_DDR4_VAL is not set
+# CONFIG_TARGET_IMX8MM_DDR3L_VAL is not set
+# CONFIG_TARGET_IMX8MM_EVK is not set
+# CONFIG_TARGET_IMX8MM_DDR4_EVK is not set
+# CONFIG_TARGET_IMX8MM_AB2 is not set
+# CONFIG_TARGET_IMX8MM_DDR4_AB2 is not set
+# CONFIG_TARGET_IMX8MM_ICORE_MX8MM is not set
+# CONFIG_TARGET_IMX8MM_VENICE is not set
+# CONFIG_TARGET_KONTRON_MX8MM is not set
+# CONFIG_TARGET_IMX8MN_EVK is not set
+# CONFIG_TARGET_IMX8MN_DDR4_EVK is not set
+# CONFIG_TARGET_IMX8MN_DDR3_EVK is not set
+# CONFIG_TARGET_IMX8MN_AB2 is not set
+# CONFIG_TARGET_IMX8MN_DDR4_AB2 is not set
+# CONFIG_TARGET_IMX8MN_DDR3L_AB2 is not set
+# CONFIG_TARGET_IMX8MN_VENICE is not set
+# CONFIG_TARGET_IMX8MP_EVK is not set
+# CONFIG_TARGET_IMX8MP_DDR4_EVK is not set
+# CONFIG_TARGET_PICO_IMX8MQ is not set
+# CONFIG_TARGET_IMX8MN_VAR_SOM is not set
+# CONFIG_TARGET_KONTRON_PITX_IMX8M is not set
+# CONFIG_TARGET_VERDIN_IMX8MM is not set
+# CONFIG_TARGET_VERDIN_IMX8MP is not set
+# CONFIG_TARGET_IMX8MM_BEACON is not set
+# CONFIG_TARGET_IMX8MN_BEACON is not set
+# CONFIG_TARGET_PHYCORE_IMX8MM is not set
+# CONFIG_TARGET_PHYCORE_IMX8MP is not set
+# CONFIG_TARGET_IMX8MM_CL_IOT_GATE is not set
+# CONFIG_TARGET_IMX8MM_CL_IOT_GATE_OPTEE is not set
+# CONFIG_TARGET_IMX8MP_RSB3720A1_4G is not set
+# CONFIG_TARGET_IMX8MP_RSB3720A1_6G is not set
+CONFIG_TARGET_CL_SOM_IMX8=y
+CONFIG_DEFAULT_DTB="sbc-imx8.dtb"
 CONFIG_MULTI_DTB_FIT_UNCOMPRESS_SZ=0x8000
 CONFIG_SPL_MMC=y
 CONFIG_SPL_SERIAL=y
@@ -207,7 +251,7 @@ CONFIG_SYS_CLK_FREQ=0
 # CONFIG_SPL_FS_FAT is not set
 # CONFIG_SPL_LIBDISK_SUPPORT is not set
 # CONFIG_SPL_SPI is not set
-# CONFIG_ARMV8_SPL_EXCEPTION_VECTORS is not set
+CONFIG_ARMV8_SPL_EXCEPTION_VECTORS=y
 # CONFIG_ARMV8_MULTIENTRY is not set
 # CONFIG_ARMV8_SET_SMPEN is not set
 
@@ -221,7 +265,9 @@ CONFIG_PSCI_RESET=y
 # CONFIG_ARMV8_PSCI is not set
 # CONFIG_ARMV8_EA_EL3_FIRST is not set
 CONFIG_MACH_IMX=y
+CONFIG_HAS_CAAM=y
 # CONFIG_IMX_OPTEE is not set
+CONFIG_ROM_UNIFIED_SECTIONS=y
 # CONFIG_IMX_BOOTAUX is not set
 # CONFIG_IMX_HAB is not set
 # CONFIG_CMD_DEKBLOB is not set
@@ -798,7 +844,7 @@ CONFIG_OF_SEPARATE=y
 # CONFIG_OF_BOARD is not set
 # CONFIG_OF_OMIT_DTB is not set
 CONFIG_DEVICE_TREE_INCLUDES=""
-CONFIG_OF_LIST="luci-imx8mq-som"
+CONFIG_OF_LIST="cl-som-imx8"
 # CONFIG_MULTI_DTB_FIT is not set
 # CONFIG_OF_DTB_PROPS_REMOVE is not set
 
@@ -935,15 +981,15 @@ CONFIG_SYS_FSL_SEC_LE=y
 #
 # i.MX8M DDR controllers
 #
-# CONFIG_IMX8M_DRAM is not set
-# CONFIG_IMX8M_LPDDR4 is not set
+CONFIG_IMX8M_DRAM=y
+CONFIG_IMX8M_LPDDR4=y
 # CONFIG_IMX8M_DDR4 is not set
 # CONFIG_IMX8M_DDR3L is not set
 CONFIG_SAVED_DRAM_TIMING_BASE=0x40000000
 # CONFIG_IMX8M_LPDDR4_FREQ0_2400MTS is not set
 # CONFIG_IMX8M_LPDDR4_FREQ0_3200MTS is not set
 # CONFIG_IMX8M_4G_LPDDR4 is not set
-# CONFIG_IMX_SNPS_DDR_PHY is not set
+CONFIG_IMX_SNPS_DDR_PHY=y
 
 #
 # Demo for driver model
@@ -960,6 +1006,7 @@ CONFIG_SAVED_DRAM_TIMING_BASE=0x40000000
 # CONFIG_DMA is not set
 # CONFIG_DMA_LPC32XX is not set
 # CONFIG_TI_EDMA3 is not set
+# CONFIG_APBH_DMA is not set
 # CONFIG_DMA_LEGACY is not set
 
 #
@@ -1143,7 +1190,8 @@ CONFIG_MMC_VERBOSE=y
 # CONFIG_STM32_SDMMC2 is not set
 # CONFIG_FTSDC010 is not set
 # CONFIG_FSL_ESDHC is not set
-# CONFIG_FSL_ESDHC_IMX is not set
+CONFIG_FSL_ESDHC_IMX=y
+CONFIG_FSL_USDHC=y
 
 #
 # MTD Support
@@ -1184,6 +1232,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_EEPRO100 is not set
 # CONFIG_ETH_DESIGNWARE is not set
 # CONFIG_ETHOC is not set
+# CONFIG_FEC_MXC is not set
 # CONFIG_FMAN_ENET is not set
 # CONFIG_FTMAC100 is not set
 # CONFIG_KS8851_MLL is not set
@@ -1275,7 +1324,7 @@ CONFIG_DM_REGULATOR_GPIO=y
 # CONFIG_DM_REGULATOR_ANATOP is not set
 # CONFIG_DM_REGULATOR_SCMI is not set
 # CONFIG_POWER_MT6323 is not set
-# CONFIG_SPL_POWER_I2C is not set
+CONFIG_SPL_POWER_I2C=y
 # CONFIG_DM_PWM is not set
 # CONFIG_PWM_IMX is not set
 # CONFIG_PWM_SANDBOX is not set
@@ -1319,6 +1368,7 @@ CONFIG_CONS_INDEX=1
 # CONFIG_FSL_LPUART is not set
 # CONFIG_MVEBU_A3700_UART is not set
 # CONFIG_MCFUART is not set
+CONFIG_MXC_UART=y
 # CONFIG_NULLDEV_SERIAL is not set
 # CONFIG_SYS_NS16550 is not set
 # CONFIG_NS16550_DYNAMIC is not set
@@ -1365,7 +1415,7 @@ CONFIG_IMX_TMU=y
 #
 CONFIG_USB=y
 CONFIG_DM_USB=y
-CONFIG_DM_USB_GADGET=y
+# CONFIG_DM_USB_GADGET is not set
 
 #
 # USB Host Controller Drivers
