--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -183,9 +183,9 @@ CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_NR_DRAM_BANKS=2
 CONFIG_SYS_MEMTEST_START=0x0
 CONFIG_SYS_MEMTEST_END=0x1000
-CONFIG_ENV_SIZE=0x1000
+CONFIG_ENV_SIZE=0x4000
 CONFIG_ENV_OFFSET=0x400000
-CONFIG_IMX_CONFIG="arch/arm/mach-imx/spl_sd.cfg"
+CONFIG_IMX_CONFIG="arch/arm/mach-imx/imx8m/imximage.cfg"
 CONFIG_SYS_I2C_MXC_I2C1=y
 CONFIG_SYS_I2C_MXC_I2C2=y
 CONFIG_SYS_I2C_MXC_I2C3=y
@@ -268,7 +268,7 @@ CONFIG_MACH_IMX=y
 CONFIG_HAS_CAAM=y
 # CONFIG_IMX_OPTEE is not set
 CONFIG_ROM_UNIFIED_SECTIONS=y
-# CONFIG_IMX_BOOTAUX is not set
+CONFIG_IMX_BOOTAUX=y
 # CONFIG_IMX_HAB is not set
 # CONFIG_CMD_DEKBLOB is not set
 # CONFIG_IMX_CAAM_DEK_ENCAP is not set
@@ -320,8 +320,8 @@ CONFIG_ARCH_SUPPORTS_LTO=y
 # CONFIG_LTO is not set
 CONFIG_CC_HAS_ASM_INLINE=y
 # CONFIG_XEN is not set
-# CONFIG_DISTRO_DEFAULTS is not set
-# CONFIG_ENV_VARS_UBOOT_CONFIG is not set
+CONFIG_DISTRO_DEFAULTS=y
+CONFIG_ENV_VARS_UBOOT_CONFIG=y
 # CONFIG_SYS_BOOT_GET_CMDLINE is not set
 # CONFIG_SYS_BOOT_GET_KBD is not set
 CONFIG_SYS_MALLOC_F=y
@@ -331,9 +331,9 @@ CONFIG_SYS_MALLOC_CLEAR_ON_INIT=y
 # CONFIG_TOOLS_DEBUG is not set
 CONFIG_PHYS_64BIT=y
 CONFIG_SPL_IMAGE="spl/u-boot-spl.bin"
-# CONFIG_REMAKE_ELF is not set
+CONFIG_REMAKE_ELF=y
 # CONFIG_SYS_CUSTOM_LDSCRIPT is not set
-CONFIG_SYS_LOAD_ADDR=0x40480000
+CONFIG_SYS_LOAD_ADDR=0x40400000
 CONFIG_PLATFORM_ELFENTRY="_start"
 CONFIG_STACK_SIZE=0x1000000
 CONFIG_SYS_SRAM_BASE=0x0
@@ -355,7 +355,7 @@ CONFIG_SYS_SRAM_SIZE=0x0
 #
 # CONFIG_ANDROID_BOOT_IMAGE is not set
 CONFIG_FIT=y
-# CONFIG_TIMESTAMP is not set
+CONFIG_TIMESTAMP=y
 CONFIG_FIT_EXTERNAL_OFFSET=0x3000
 CONFIG_FIT_FULL_CHECK=y
 # CONFIG_FIT_SIGNATURE is not set
@@ -372,10 +372,9 @@ CONFIG_SPL_LOAD_FIT_ADDRESS=0x0
 # CONFIG_SPL_LOAD_FIT_FULL is not set
 # CONFIG_SPL_FIT_IMAGE_POST_PROCESS is not set
 CONFIG_SPL_FIT_SOURCE=""
-CONFIG_USE_SPL_FIT_GENERATOR=y
-CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
+# CONFIG_USE_SPL_FIT_GENERATOR is not set
 CONFIG_LEGACY_IMAGE_FORMAT=y
-# CONFIG_SUPPORT_RAW_INITRD is not set
+CONFIG_SUPPORT_RAW_INITRD=y
 # CONFIG_OF_BOARD_SETUP is not set
 CONFIG_OF_SYSTEM_SETUP=y
 # CONFIG_OF_STDOUT_VIA_ALIAS is not set
@@ -422,6 +421,7 @@ CONFIG_DEFAULT_FDT_FILE="sbc-imx8.dtb"
 #
 # Console
 #
+CONFIG_MENU=y
 # CONFIG_CONSOLE_RECORD is not set
 # CONFIG_DISABLE_CONSOLE is not set
 CONFIG_LOGLEVEL=4
@@ -455,7 +455,7 @@ CONFIG_DISPLAY_BOARDINFO=y
 # Start-up hooks
 #
 # CONFIG_ARCH_EARLY_INIT_R is not set
-# CONFIG_ARCH_MISC_INIT is not set
+CONFIG_ARCH_MISC_INIT=y
 CONFIG_BOARD_EARLY_INIT_F=y
 # CONFIG_BOARD_EARLY_INIT_R is not set
 CONFIG_BOARD_LATE_INIT=y
@@ -504,7 +504,9 @@ CONFIG_SPL_BOARD_INIT=y
 CONFIG_SPL_SEPARATE_BSS=y
 CONFIG_SPL_BANNER_PRINT=y
 # CONFIG_SPL_DISPLAY_PRINT is not set
-# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR is not set
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR=y
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_SECTOR=0x300
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_DATA_PART_OFFSET=0x0
 # CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION is not set
 # CONFIG_SUPPORT_EMMC_BOOT_OVERRIDE_PART_CONFIG is not set
 CONFIG_SPL_CRC32=y
@@ -512,7 +514,7 @@ CONFIG_SPL_CRC32=y
 CONFIG_SPL_FIT_IMAGE_TINY=y
 # CONFIG_SPL_CACHE is not set
 # CONFIG_SPL_CPU is not set
-# CONFIG_SPL_CRYPTO is not set
+CONFIG_SPL_CRYPTO=y
 # CONFIG_SPL_DMA is not set
 # CONFIG_SPL_ENV_SUPPORT is not set
 # CONFIG_SPL_FS_EXT4 is not set
@@ -551,7 +553,7 @@ CONFIG_SPL_POWER=y
 # CONFIG_SPL_THERMAL is not set
 # CONFIG_SPL_USB_HOST is not set
 # CONFIG_SPL_USB_GADGET is not set
-# CONFIG_SPL_WATCHDOG is not set
+CONFIG_SPL_WATCHDOG=y
 # CONFIG_SPL_YMODEM_SUPPORT is not set
 # CONFIG_SPL_ATF is not set
 # CONFIG_SPL_AM33XX_ENABLE_RTC32K_OSC is not set
@@ -648,6 +650,7 @@ CONFIG_CMD_MEMINFO=y
 CONFIG_CMD_MEMORY=y
 # CONFIG_CMD_MEM_SEARCH is not set
 # CONFIG_CMD_MX_CYCLIC is not set
+CONFIG_CMD_RANDOM=y
 CONFIG_CMD_MEMTEST=y
 # CONFIG_SYS_ALT_MEMTEST is not set
 # CONFIG_CMD_SHA1SUM is not set
@@ -673,7 +676,7 @@ CONFIG_CMD_UNZIP=y
 # CONFIG_CMD_DFU is not set
 CONFIG_CMD_DM=y
 # CONFIG_CMD_FPGAD is not set
-# CONFIG_CMD_FUSE is not set
+CONFIG_CMD_FUSE=y
 CONFIG_CMD_GPIO=y
 # CONFIG_CMD_GPT is not set
 # CONFIG_RANDOM_UUID is not set
@@ -690,7 +693,7 @@ CONFIG_CMD_MMC=y
 # CONFIG_CMD_MMC_SWRITE is not set
 # CONFIG_CMD_CLONE is not set
 # CONFIG_CMD_OSD is not set
-# CONFIG_CMD_PART is not set
+CONFIG_CMD_PART=y
 # CONFIG_CMD_PCI is not set
 CONFIG_CMD_PINMUX=y
 CONFIG_CMD_POWEROFF=y
@@ -719,7 +722,7 @@ CONFIG_CMD_SETEXPR=y
 #
 CONFIG_CMD_NET=y
 CONFIG_CMD_BOOTP=y
-# CONFIG_CMD_DHCP is not set
+CONFIG_CMD_DHCP=y
 CONFIG_BOOTP_BOOTPATH=y
 CONFIG_BOOTP_DNS=y
 # CONFIG_BOOTP_DNS2 is not set
@@ -729,6 +732,8 @@ CONFIG_BOOTP_HOSTNAME=y
 CONFIG_BOOTP_SUBNETMASK=y
 # CONFIG_BOOTP_NTPSERVER is not set
 # CONFIG_CMD_PCAP is not set
+CONFIG_BOOTP_PXE=y
+CONFIG_BOOTP_PXE_CLIENTARCH=0x16
 CONFIG_BOOTP_VCI_STRING="U-Boot.armv8"
 CONFIG_CMD_TFTPBOOT=y
 # CONFIG_CMD_TFTPPUT is not set
@@ -737,13 +742,13 @@ CONFIG_NET_TFTP_VARS=y
 # CONFIG_CMD_RARP is not set
 CONFIG_CMD_NFS=y
 CONFIG_CMD_MII=y
-# CONFIG_CMD_PING is not set
+CONFIG_CMD_PING=y
 # CONFIG_CMD_CDP is not set
 # CONFIG_CMD_SNTP is not set
 # CONFIG_CMD_DNS is not set
 # CONFIG_CMD_LINK_LOCAL is not set
 # CONFIG_CMD_ETHSW is not set
-# CONFIG_CMD_PXE is not set
+CONFIG_CMD_PXE=y
 # CONFIG_CMD_WOL is not set
 
 #
@@ -755,11 +760,12 @@ CONFIG_CMD_CACHE=y
 # CONFIG_CMD_CONITRACE is not set
 # CONFIG_CMD_EXCEPTION is not set
 # CONFIG_CMD_DATE is not set
+# CONFIG_CMD_RTC is not set
 # CONFIG_CMD_TIME is not set
 # CONFIG_CMD_GETTIME is not set
 CONFIG_CMD_SLEEP=y
 # CONFIG_CMD_TIMER is not set
-# CONFIG_CMD_SYSBOOT is not set
+CONFIG_CMD_SYSBOOT=y
 # CONFIG_CMD_QFW is not set
 # CONFIG_CMD_PSTORE is not set
 # CONFIG_CMD_TERMINAL is not set
@@ -854,7 +860,7 @@ CONFIG_OF_LIST="cl-som-imx8"
 CONFIG_ENV_SUPPORT=y
 CONFIG_ENV_SOURCE_FILE=""
 CONFIG_SAVEENV=y
-# CONFIG_ENV_OVERWRITE is not set
+CONFIG_ENV_OVERWRITE=y
 # CONFIG_ENV_IS_NOWHERE is not set
 # CONFIG_ENV_IS_IN_EEPROM is not set
 # CONFIG_ENV_IS_IN_FAT is not set
@@ -1265,13 +1271,20 @@ CONFIG_MII=y
 #
 # PHY Subsystem
 #
-# CONFIG_PHY is not set
+CONFIG_PHY=y
 # CONFIG_SPL_PHY is not set
+# CONFIG_NOP_PHY is not set
 # CONFIG_MIPI_DPHY_HELPERS is not set
+# CONFIG_BCM_SR_PCIE_PHY is not set
+# CONFIG_MSM8916_USB_PHY is not set
+CONFIG_PHY_IMX8MQ_USB=y
+# CONFIG_CDNS3_USB_PHY is not set
 
 #
 # Rockchip PHY driver
 #
+# CONFIG_PHY_CADENCE_SIERRA is not set
+# CONFIG_PHY_CADENCE_TORRENT is not set
 # CONFIG_MVEBU_COMPHY_SUPPORT is not set
 
 #
@@ -1343,19 +1356,38 @@ CONFIG_SPL_POWER_I2C=y
 #
 # Reset Controller Support
 #
-# CONFIG_DM_RESET is not set
+CONFIG_DM_RESET=y
+# CONFIG_RESET_AST2500 is not set
+# CONFIG_RESET_AST2600 is not set
+# CONFIG_RESET_HISILICON is not set
+CONFIG_RESET_IMX7=y
+# CONFIG_RESET_SYSCON is not set
+# CONFIG_RESET_DRA7 is not set
 # CONFIG_DM_RNG is not set
 
 #
 # Real Time Clock
 #
-# CONFIG_DM_RTC is not set
+CONFIG_DM_RTC=y
 # CONFIG_RTC_ENABLE_32KHZ_OUTPUT is not set
+# CONFIG_RTC_PCF2127 is not set
+# CONFIG_RTC_DS1307 is not set
+# CONFIG_RTC_DS3232 is not set
+CONFIG_RTC_EMULATION=y
+# CONFIG_RTC_ISL1208 is not set
 # CONFIG_RTC_PCF8563 is not set
+# CONFIG_RTC_RV3028 is not set
+# CONFIG_RTC_RV3029 is not set
+# CONFIG_RTC_RV8803 is not set
+# CONFIG_RTC_RX8010SJ is not set
+# CONFIG_RTC_RX8025 is not set
 # CONFIG_RTC_PL031 is not set
+# CONFIG_RTC_MV is not set
 # CONFIG_RTC_S35392A is not set
 # CONFIG_RTC_MC146818 is not set
 # CONFIG_RTC_M41T62 is not set
+# CONFIG_RTC_STM32 is not set
+# CONFIG_RTC_ABX80X is not set
 # CONFIG_SCSI is not set
 # CONFIG_DM_SCSI is not set
 CONFIG_SERIAL=y
@@ -1571,7 +1603,7 @@ CONFIG_WATCHDOG_TIMEOUT_MSECS=60000
 CONFIG_FS_EXT4=y
 CONFIG_EXT4_WRITE=y
 CONFIG_FS_FAT=y
-# CONFIG_FAT_WRITE is not set
+CONFIG_FAT_WRITE=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
 # CONFIG_FS_JFFS2 is not set
 # CONFIG_UBIFS_SILENCE_MSG is not set
@@ -1598,6 +1630,8 @@ CONFIG_SYS_HZ=1000
 CONFIG_SPL_USE_TINY_PRINTF=y
 # CONFIG_PANIC_HANG is not set
 CONFIG_REGEX=y
+CONFIG_LIB_RAND=y
+# CONFIG_LIB_HW_RAND is not set
 CONFIG_SUPPORT_ACPI=y
 # CONFIG_GENERATE_ACPI_TABLE is not set
 # CONFIG_SPL_TINY_MEMSET is not set
@@ -1677,6 +1711,7 @@ CONFIG_TPL_OF_LIBFDT_ASSUME_MASK=0xff
 # CONFIG_OPTEE_IMAGE is not set
 # CONFIG_BOOTM_OPTEE is not set
 # CONFIG_TEST_FDTDEC is not set
+CONFIG_LIB_DATE=y
 CONFIG_LIB_ELF=y
 CONFIG_LMB=y
 CONFIG_LMB_USE_MAX_REGIONS=y
