--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -245,6 +245,7 @@ CONFIG_ERR_PTR_OFFSET=0x0
 CONFIG_SPL_SIZE_LIMIT=0x0
 CONFIG_SPL=y
 CONFIG_BOOTSTAGE_STASH_ADDR=0
+CONFIG_ENV_OFFSET_REDUND=0x1000000
 CONFIG_IDENT_STRING=""
 CONFIG_SYS_CLK_FREQ=0
 # CONFIG_CHIP_DIP_SCAN is not set
@@ -317,16 +318,16 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_OPTIMIZE_INLINING is not set
 # CONFIG_SPL_OPTIMIZE_INLINING is not set
 CONFIG_ARCH_SUPPORTS_LTO=y
-# CONFIG_LTO is not set
+CONFIG_LTO=y
 CONFIG_CC_HAS_ASM_INLINE=y
 # CONFIG_XEN is not set
-CONFIG_DISTRO_DEFAULTS=y
+# CONFIG_DISTRO_DEFAULTS is not set
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 # CONFIG_SYS_BOOT_GET_CMDLINE is not set
 # CONFIG_SYS_BOOT_GET_KBD is not set
 CONFIG_SYS_MALLOC_F=y
 CONFIG_EXPERT=y
-CONFIG_SYS_MALLOC_CLEAR_ON_INIT=y
+# CONFIG_SYS_MALLOC_CLEAR_ON_INIT is not set
 # CONFIG_SYS_MALLOC_DEFAULT_TO_INIT is not set
 # CONFIG_TOOLS_DEBUG is not set
 CONFIG_PHYS_64BIT=y
@@ -596,12 +597,12 @@ CONFIG_BOOTM_LINUX=y
 # CONFIG_BOOTM_NETBSD is not set
 # CONFIG_BOOTM_OPENRTOS is not set
 # CONFIG_BOOTM_OSE is not set
-CONFIG_BOOTM_PLAN9=y
-CONFIG_BOOTM_RTEMS=y
-CONFIG_BOOTM_VXWORKS=y
+# CONFIG_BOOTM_PLAN9 is not set
+# CONFIG_BOOTM_RTEMS is not set
+# CONFIG_BOOTM_VXWORKS is not set
 # CONFIG_CMD_BOOTMENU is not set
 # CONFIG_CMD_ADTIMG is not set
-CONFIG_CMD_ELF=y
+# CONFIG_CMD_ELF is not set
 CONFIG_CMD_FDT=y
 CONFIG_CMD_GO=y
 CONFIG_CMD_RUN=y
@@ -704,9 +705,7 @@ CONFIG_CMD_POWEROFF=y
 # CONFIG_CMD_SDRAM is not set
 # CONFIG_CMD_TSI148 is not set
 # CONFIG_CMD_UNIVERSE is not set
-CONFIG_CMD_USB=y
 # CONFIG_CMD_USB_SDP is not set
-CONFIG_CMD_USB_MASS_STORAGE=y
 
 #
 # Shell scripting commands
@@ -720,36 +719,6 @@ CONFIG_CMD_SETEXPR=y
 #
 # Android support commands
 #
-CONFIG_CMD_NET=y
-CONFIG_CMD_BOOTP=y
-CONFIG_CMD_DHCP=y
-CONFIG_BOOTP_BOOTPATH=y
-CONFIG_BOOTP_DNS=y
-# CONFIG_BOOTP_DNS2 is not set
-CONFIG_BOOTP_GATEWAY=y
-CONFIG_BOOTP_HOSTNAME=y
-# CONFIG_BOOTP_PREFER_SERVERIP is not set
-CONFIG_BOOTP_SUBNETMASK=y
-# CONFIG_BOOTP_NTPSERVER is not set
-# CONFIG_CMD_PCAP is not set
-CONFIG_BOOTP_PXE=y
-CONFIG_BOOTP_PXE_CLIENTARCH=0x16
-CONFIG_BOOTP_VCI_STRING="U-Boot.armv8"
-CONFIG_CMD_TFTPBOOT=y
-# CONFIG_CMD_TFTPPUT is not set
-# CONFIG_CMD_TFTPSRV is not set
-CONFIG_NET_TFTP_VARS=y
-# CONFIG_CMD_RARP is not set
-CONFIG_CMD_NFS=y
-CONFIG_CMD_MII=y
-CONFIG_CMD_PING=y
-# CONFIG_CMD_CDP is not set
-# CONFIG_CMD_SNTP is not set
-# CONFIG_CMD_DNS is not set
-# CONFIG_CMD_LINK_LOCAL is not set
-# CONFIG_CMD_ETHSW is not set
-CONFIG_CMD_PXE=y
-# CONFIG_CMD_WOL is not set
 
 #
 # Misc commands
@@ -872,7 +841,7 @@ CONFIG_ENV_IS_IN_MMC=y
 # CONFIG_ENV_IS_IN_ONENAND is not set
 # CONFIG_ENV_IS_IN_REMOTE is not set
 # CONFIG_ENV_IS_IN_SATA is not set
-# CONFIG_SYS_REDUNDAND_ENVIRONMENT is not set
+CONFIG_SYS_REDUNDAND_ENVIRONMENT=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_SYS_MMC_ENV_DEV=0
 CONFIG_SYS_MMC_ENV_PART=1
@@ -883,20 +852,7 @@ CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG=y
 # CONFIG_ENV_WRITEABLE_LIST is not set
 # CONFIG_ENV_ACCESS_IGNORE_FORCE is not set
 # CONFIG_VERSION_VARIABLE is not set
-CONFIG_NET=y
-# CONFIG_PROT_UDP is not set
-# CONFIG_BOOTP_SEND_HOSTNAME is not set
-# CONFIG_NET_RANDOM_ETHADDR is not set
-# CONFIG_NETCONSOLE is not set
-# CONFIG_IP_DEFRAG is not set
-CONFIG_TFTP_BLOCKSIZE=1468
-CONFIG_TFTP_WINDOWSIZE=1
-# CONFIG_TFTP_TSIZE is not set
-# CONFIG_SERVERIP_FROM_PROXYDHCP is not set
-CONFIG_SERVERIP_FROM_PROXYDHCP_DELAY_MS=100
-# CONFIG_KEEP_SERVERADDR is not set
-# CONFIG_UDP_CHECKSUM is not set
-# CONFIG_BOOTP_SERVERIP is not set
+# CONFIG_NET is not set
 
 #
 # Device Drivers
@@ -987,7 +943,7 @@ CONFIG_SYS_FSL_SEC_LE=y
 #
 # i.MX8M DDR controllers
 #
-# CONFIG_IMX8M_DRAM is not set
+CONFIG_IMX8M_DRAM=y
 CONFIG_IMX8M_LPDDR4=y
 # CONFIG_IMX8M_DDR4 is not set
 # CONFIG_IMX8M_DDR3L is not set
@@ -1018,8 +974,6 @@ CONFIG_IMX_SNPS_DDR_PHY=y
 #
 # Fastboot support
 #
-# CONFIG_USB_FUNCTION_FASTBOOT is not set
-# CONFIG_UDP_FUNCTION_FASTBOOT is not set
 CONFIG_FIRMWARE=y
 # CONFIG_SPL_FIRMWARE is not set
 CONFIG_ARM_PSCI_FW=y
@@ -1226,37 +1180,10 @@ CONFIG_FSL_USDHC=y
 # CONFIG_MULTIPLEXER is not set
 # CONFIG_BITBANGMII is not set
 # CONFIG_MV88E6352_SWITCH is not set
-# CONFIG_PHYLIB is not set
 # CONFIG_FSL_PFE is not set
 CONFIG_ETH=y
 # CONFIG_DM_ETH is not set
 # CONFIG_DM_ETH_PHY is not set
-CONFIG_NETDEVICES=y
-# CONFIG_PHY_GIGE is not set
-# CONFIG_BCM_SF2_ETH is not set
-# CONFIG_E1000 is not set
-# CONFIG_EEPRO100 is not set
-# CONFIG_ETH_DESIGNWARE is not set
-# CONFIG_ETHOC is not set
-# CONFIG_FEC_MXC is not set
-# CONFIG_FMAN_ENET is not set
-# CONFIG_FTMAC100 is not set
-# CONFIG_KS8851_MLL is not set
-# CONFIG_MACB is not set
-# CONFIG_RGMII is not set
-CONFIG_MII=y
-# CONFIG_PCNET is not set
-# CONFIG_RTL8139 is not set
-# CONFIG_RTL8169 is not set
-# CONFIG_SMC911X is not set
-# CONFIG_SUN7I_GMAC is not set
-# CONFIG_SH_ETHER is not set
-# CONFIG_DRIVER_TI_CPSW is not set
-# CONFIG_DRIVER_TI_EMAC is not set
-# CONFIG_DRIVER_TI_KEYSTONE_NET is not set
-# CONFIG_TULIP is not set
-# CONFIG_SYS_DPAA_QBMAN is not set
-# CONFIG_TSEC_ENET is not set
 # CONFIG_NVME is not set
 # CONFIG_NVME_APPLE is not set
 # CONFIG_PCI is not set
@@ -1283,8 +1210,6 @@ CONFIG_PHY_IMX8MQ_USB=y
 #
 # Rockchip PHY driver
 #
-# CONFIG_PHY_CADENCE_SIERRA is not set
-# CONFIG_PHY_CADENCE_TORRENT is not set
 # CONFIG_MVEBU_COMPHY_SUPPORT is not set
 
 #
@@ -1356,13 +1281,7 @@ CONFIG_SPL_POWER_I2C=y
 #
 # Reset Controller Support
 #
-CONFIG_DM_RESET=y
-# CONFIG_RESET_AST2500 is not set
-# CONFIG_RESET_AST2600 is not set
-# CONFIG_RESET_HISILICON is not set
-CONFIG_RESET_IMX7=y
-# CONFIG_RESET_SYSCON is not set
-# CONFIG_RESET_DRA7 is not set
+# CONFIG_DM_RESET is not set
 # CONFIG_DM_RNG is not set
 
 #
@@ -1432,10 +1351,7 @@ CONFIG_MXC_UART=y
 #
 # CONFIG_SYSRESET is not set
 # CONFIG_TEE is not set
-CONFIG_DM_THERMAL=y
-CONFIG_IMX_TMU=y
-# CONFIG_SCMI_THERMAL is not set
-# CONFIG_TI_DRA7_THERMAL is not set
+# CONFIG_DM_THERMAL is not set
 
 #
 # Timer Support
@@ -1445,90 +1361,7 @@ CONFIG_IMX_TMU=y
 #
 # TPM support
 #
-CONFIG_USB=y
-CONFIG_DM_USB=y
-# CONFIG_DM_USB_GADGET is not set
-
-#
-# USB Host Controller Drivers
-#
-CONFIG_USB_HOST=y
-CONFIG_USB_XHCI_HCD=y
-CONFIG_USB_XHCI_DWC3=y
-# CONFIG_USB_XHCI_DWC3_OF_SIMPLE is not set
-# CONFIG_USB_XHCI_PCI is not set
-# CONFIG_USB_XHCI_FSL is not set
-# CONFIG_USB_XHCI_BRCM is not set
-CONFIG_USB_XHCI_IMX8M=y
-# CONFIG_USB_EHCI_HCD is not set
-# CONFIG_USB_OHCI_HCD is not set
-# CONFIG_USB_UHCI_HCD is not set
-# CONFIG_USB_DWC2 is not set
-# CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_DWC3=y
-CONFIG_USB_DWC3_GADGET=y
-
-#
-# Platform Glue Driver Support
-#
-# CONFIG_USB_DWC3_OMAP is not set
-# CONFIG_USB_DWC3_LAYERSCAPE is not set
-
-#
-# PHY Subsystem
-#
-# CONFIG_USB_DWC3_PHY_OMAP is not set
-# CONFIG_USB_DWC3_PHY_SAMSUNG is not set
-# CONFIG_USB_CDNS3 is not set
-
-#
-# Legacy MUSB Support
-#
-# CONFIG_USB_MUSB_HCD is not set
-# CONFIG_USB_MUSB_UDC is not set
-
-#
-# MUSB Controller Driver
-#
-# CONFIG_USB_MUSB_HOST is not set
-# CONFIG_USB_MUSB_GADGET is not set
-# CONFIG_USB_MUSB_PIO_ONLY is not set
-
-#
-# USB Phy
-#
-# CONFIG_TWL4030_USB is not set
-# CONFIG_ROCKCHIP_USB2_PHY is not set
-
-#
-# ULPI drivers
-#
-
-#
-# USB peripherals
-#
-CONFIG_USB_STORAGE=y
-# CONFIG_USB_KEYBOARD is not set
-# CONFIG_USB_HOST_ETHER is not set
-CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_MANUFACTURER="FSL"
-CONFIG_USB_GADGET_VENDOR_NUM=0x0525
-CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
-# CONFIG_USB_GADGET_ATMEL_USBA is not set
-# CONFIG_USB_GADGET_BCM_UDC_OTG_PHY is not set
-# CONFIG_USB_GADGET_DWC2_OTG is not set
-# CONFIG_USB_GADGET_OS_DESCRIPTORS is not set
-# CONFIG_CI_UDC is not set
-CONFIG_USB_GADGET_VBUS_DRAW=2
-CONFIG_SDP_LOADADDR=0x40400000
-CONFIG_USB_GADGET_DUALSPEED=y
-CONFIG_USB_GADGET_DOWNLOAD=y
-CONFIG_USB_FUNCTION_MASS_STORAGE=y
-# CONFIG_USB_FUNCTION_ROCKUSB is not set
-# CONFIG_USB_FUNCTION_SDP is not set
-# CONFIG_USB_FUNCTION_THOR is not set
-# CONFIG_USB_FUNCTION_ACM is not set
-# CONFIG_USB_ETHER is not set
+# CONFIG_USB is not set
 
 #
 # UFS Host Controller Support
@@ -1707,12 +1540,12 @@ CONFIG_TPL_OF_LIBFDT_ASSUME_MASK=0xff
 # CONFIG_LIB_RATIONAL is not set
 # CONFIG_SPL_LIB_RATIONAL is not set
 # CONFIG_SMBIOS_PARSER is not set
+# CONFIG_EFI_LOADER is not set
 # CONFIG_OPTEE_LIB is not set
 # CONFIG_OPTEE_IMAGE is not set
 # CONFIG_BOOTM_OPTEE is not set
 # CONFIG_TEST_FDTDEC is not set
 CONFIG_LIB_DATE=y
-CONFIG_LIB_ELF=y
 CONFIG_LMB=y
 CONFIG_LMB_USE_MAX_REGIONS=y
 CONFIG_LMB_MAX_REGIONS=8
