--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -318,7 +318,7 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_OPTIMIZE_INLINING is not set
 # CONFIG_SPL_OPTIMIZE_INLINING is not set
 CONFIG_ARCH_SUPPORTS_LTO=y
-CONFIG_LTO=y
+# CONFIG_LTO is not set
 CONFIG_CC_HAS_ASM_INLINE=y
 # CONFIG_XEN is not set
 # CONFIG_DISTRO_DEFAULTS is not set
