--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -191,7 +191,7 @@ CONFIG_SYS_I2C_MXC_I2C2=y
 CONFIG_SYS_I2C_MXC_I2C3=y
 # CONFIG_SYS_I2C_MXC_I2C4 is not set
 CONFIG_DM_GPIO=y
-CONFIG_DEFAULT_DEVICE_TREE="cl-som-imx8"
+CONFIG_DEFAULT_DEVICE_TREE="luci-imx8mq-som.dtb"
 CONFIG_SPL_TEXT_BASE=0x7E1000
 CONFIG_IMX8M=y
 CONFIG_IMX8MQ=y
