--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -191,7 +191,7 @@ CONFIG_SYS_I2C_MXC_I2C2=y
 CONFIG_SYS_I2C_MXC_I2C3=y
 # CONFIG_SYS_I2C_MXC_I2C4 is not set
 CONFIG_DM_GPIO=y
-CONFIG_DEFAULT_DEVICE_TREE="luci-imx8mq-som.dtb"
+CONFIG_DEFAULT_DEVICE_TREE="cl-som-imx8"
 CONFIG_SPL_TEXT_BASE=0x7E1000
 CONFIG_IMX8M=y
 CONFIG_IMX8MQ=y
@@ -235,7 +235,7 @@ CONFIG_IMX8M_MCU_RDC_STOP_CONFIG_ADDR=0x187000
 # CONFIG_TARGET_IMX8MP_RSB3720A1_4G is not set
 # CONFIG_TARGET_IMX8MP_RSB3720A1_6G is not set
 CONFIG_TARGET_CL_SOM_IMX8=y
-CONFIG_DEFAULT_DTB="sbc-imx8.dtb"
+CONFIG_DEFAULT_DTB="luci-imx8mq-som.dtb"
 CONFIG_MULTI_DTB_FIT_UNCOMPRESS_SZ=0x8000
 CONFIG_SPL_MMC=y
 CONFIG_SPL_SERIAL=y
