Add mender changes

--- a/configs/cl-som-imx8_defconfig
+++ b/configs/cl-som-imx8_defconfig
@@ -240,6 +240,7 @@ CONFIG_MULTI_DTB_FIT_UNCOMPRESS_SZ=0x8000
 CONFIG_SPL_MMC=y
 CONFIG_SPL_SERIAL=y
 CONFIG_SPL_DRIVERS_MISC=y
+CONFIG_BOOTCOUNT_BOOTLIMIT=0
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x2000
 CONFIG_ERR_PTR_OFFSET=0x0
 CONFIG_SPL_SIZE_LIMIT=0x0
@@ -723,6 +724,7 @@ CONFIG_CMD_SETEXPR=y
 #
 # Misc commands
 #
+# CONFIG_CMD_BOOTCOUNT is not set
 # CONFIG_CMD_BSP is not set
 CONFIG_CMD_BLOCK_CACHE=y
 CONFIG_CMD_CACHE=y
@@ -844,7 +846,7 @@ CONFIG_ENV_IS_IN_MMC=y
 CONFIG_SYS_REDUNDAND_ENVIRONMENT=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_SYS_MMC_ENV_DEV=0
-CONFIG_SYS_MMC_ENV_PART=1
+CONFIG_SYS_MMC_ENV_PART=0
 # CONFIG_USE_DEFAULT_ENV_FILE is not set
 CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG=y
 # CONFIG_ENV_IMPORT_FDT is not set
@@ -899,7 +901,14 @@ CONFIG_HAVE_BLOCK_DEVICE=y
 CONFIG_BLOCK_CACHE=y
 # CONFIG_EFI_MEDIA is not set
 # CONFIG_IDE is not set
-# CONFIG_BOOTCOUNT_LIMIT is not set
+CONFIG_BOOTCOUNT_LIMIT=y
+# CONFIG_BOOTCOUNT_GENERIC is not set
+# CONFIG_BOOTCOUNT_EXT is not set
+CONFIG_BOOTCOUNT_ENV=y
+# CONFIG_BOOTCOUNT_RAM is not set
+# CONFIG_BOOTCOUNT_I2C is not set
+# CONFIG_DM_BOOTCOUNT is not set
+CONFIG_SYS_BOOTCOUNT_MAGIC=0xB001C041
 
 #
 # Button Support
